# rag-quality-gate

./: .gitignore  .rqg.yml  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: issue4-post-expiry-cleanup.md
.github/workflows/: ci.yml  phase2-5-weekly-metrics.yml  phase2-5-weekly-review-issue.yml  phase2-weekly-metrics.yml  rqg-onboarding.yml
docs/: README.md
docs/adr/: 0001-model-boundaries.md  0002-product-charter-and-development-priorities.md
docs/demo/: fail-fix-cycle.md  impact-cycle.md  onboarding-quickstart.md
docs/ops/: execution-template-charter-kpi-weekly.md  phase2-5-case-quality-weekly-review.md  phase2-5-exit-readiness-check-2026-03-29.md  phase2-5-first-sprint-completion-record.md  phase2-5-hardening-plan.md  phase2-5-investigate-response-flow.md  phase2-5-release-notes-2026-03-29.md  phase2-5-vs-phase3-diff-onepager.md  phase2-5-weekly-metrics-register.md  phase2-5-ws1-baseline-sheet.md  (+6 more)
scripts/: cleanup-runs.ps1
templates/: policy.yaml
tests/: conftest.py  test_aggregate.py  test_case_migration.py  test_casegen_generator.py  test_casegen_questions.py  test_casegen_review.py  test_casegen_sections.py  test_check.py  test_cli.py  test_demo_onboarding_quickstart.py  test_eval_case_loader.py  test_evaluators.py  test_failure_reason.py  test_gate_decision_integration.py  test_impact_analysis.py  test_loader.py  test_models.py  test_phase1_domain.py  test_phase2_5_exit_gate_check.py  test_phase2_5_keyword_miss_kpi.py  test_phase2_5_risk_closure_check.py  test_phase2_5_weekly_metrics.py  test_rag_fallback.py  test_runner.py
(+61 files in other folders)
